--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,10 +41,12 @@
                 android:layout_marginStart="1dp"
                 android:src="@drawable/header"
                 android:layout_marginLeft="1dp"
+                android:paddingRight="0.5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:paddingEnd="0.5dp" />
 
             <ImageView
                 android:id="@+id/rarity"
@@ -105,7 +107,9 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/footer" />
+            android:paddingRight="0.7dp"
+            android:src="@drawable/footer"
+            android:paddingEnd="0.7dp" />
     </LinearLayout>
 
     <ImageView
