--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,18 +35,19 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="1dp"
-                android:src="@drawable/header"
                 android:layout_marginLeft="1dp"
+                android:paddingEnd="0.5dp"
                 android:paddingRight="0.5dp"
+                android:src="@drawable/header"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:paddingEnd="0.5dp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/rarity"
@@ -62,16 +63,20 @@
 
             <TextView
                 android:id="@+id/item_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:textColor="#faebcc"
-                android:textSize="30sp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:fontFamily="@font/diablo_light"
+                android:layout_marginRight="20dp"
+                android:textColor="#faebcc"
+                android:textSize="28sp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constrainedWidth="true"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/rarity"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginLeft="30dp" />
+                app:layout_constraintStart_toStartOf="@+id/imageView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
