--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -51,15 +51,20 @@
 
         <TextView
             android:id="@+id/item_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="25dp"
             android:layout_marginStart="30dp"
-            android:textColor="#faebcc"
-            android:textSize="30sp"
             android:fontFamily="@font/diablo_light"
+            android:layout_marginRight="25dp"
+            android:textColor="#faebcc"
+            android:textSize="28sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constrainedWidth="true"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/rarity"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="30dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
