Added trifecta power (angelic, demonic, ancestral) and added item icons

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -40,6 +40,16 @@
             android:layout_marginRight="13dp" />
 
         <ImageView
+            android:id="@+id/itemslot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/weapon"
+            app:layout_constraintBottom_toBottomOf="@id/rarity"
+            app:layout_constraintLeft_toLeftOf="@id/rarity"
+            app:layout_constraintRight_toRightOf="@id/rarity"
+            app:layout_constraintTop_toTopOf="@id/rarity" />
+
+        <ImageView
             android:id="@+id/delete"
             android:layout_width="25dp"
             android:layout_height="25dp"
