--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginRight="13dp" />
 
+            <ImageView
+                android:id="@+id/itemslot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/weapon"
+                app:layout_constraintBottom_toBottomOf="@id/rarity"
+                app:layout_constraintLeft_toLeftOf="@id/rarity"
+                app:layout_constraintRight_toRightOf="@id/rarity"
+                app:layout_constraintTop_toTopOf="@id/rarity" />
+
             <TextView
                 android:id="@+id/item_name"
                 android:layout_width="0dp"
