--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -32,7 +32,7 @@
             android:id="@+id/rarity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/magic"
+            android:src="@drawable/magic_new"
             android:layout_marginEnd="13dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
